[tool.poetry]
name = "aido-client"
version = "0.1.0"
description = ""
authors = ["ericjiang <my.cheng@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
transformers = "^4.37.2"
pydantic = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
