[tool.poetry]
name = "aido-client"
version = "0.1.0"
description = ""
authors = ["ericjiang <my.cheng@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
tiktoken = "^0.3.3"
transformers = "^4.28.1"
pydantic = "1.10.12"
openai = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
